src/FinancialForce Accounting/objects/codaCurrencyRevaluation__c.object
<CustomObject>
    <customHelpPage>codahelpcurrencyrevaluation</customHelpPage>
    <description>Stores the master details related to a currency revaluation.</description>
    <fields>
        <fullName>Analysis__c</fullName>
        <label>Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detail Level</fullName>
                </value>
                <value>
                    <fullName>Summary Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BreakdownByStandardAnalysisFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked your transaction line items for the gains and losses GLA will be broken down by standard analysis fields (Account, Product, Bank Account, Tax Code).</description>
        <label>Standard Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BreakdownBySubAnalysisFields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked your revaluation summary and transaction line items for the gains and losses GLA will be broken down by custom sub-analysis fields.</description>
        <label>Sub-Analysis Breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancelPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Cancel Period)</relationshipLabel>
        <relationshipName>CurrencyRevaluations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancellationReason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DimensionalAnalysis__c</fullName>
        <label>Dimensional Analysis On Lines</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Copy from Source</fullName>
                </value>
                <value>
                    <fullName>Enter Dimensions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscardReason__c</fullName>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentDescription__c</fullName>
        <label>Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentReference__c</fullName>
        <label>Document Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DualExchangeRate__c</fullName>
        <label>Dual Exchange Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualValue__c</fullName>
        <label>Dual Value</label>
        <summarizedField>codaCurrencyRevaluationSummary__c.DualValue__c</summarizedField>
        <summaryForeignKey>codaCurrencyRevaluationSummary__c.CurrencyRevaluation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ErrorListView__c</fullName>
        <label>Error</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ErrorText__c</fullName>
        <label>Error Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExcludeRevaluedLines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should previously revalued lines be excluded from selection by this revaluation or should they cause the revaluation to fail?</description>
        <label>Exclude Revalued Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupDisplayName__c</fullName>
        <description>The currency revaluation group display name.</description>
        <formula>RevalGroup__r.DisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeExchangeRate__c</fullName>
        <label>Document Exchange Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeValue__c</fullName>
        <label>Home Value</label>
        <summarizedField>codaCurrencyRevaluationSummary__c.HomeValue__c</summarizedField>
        <summaryForeignKey>codaCurrencyRevaluationSummary__c.CurrencyRevaluation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Locks__c</fullName>
        <description>The locking object ID used to protect updates to the owning currency revaluation field on Transaction lines.</description>
        <label>Locks</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period From</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period To</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Period To)</relationshipLabel>
        <relationshipName>CurrencyRevaluations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostingPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Posting Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Posting Period)</relationshipLabel>
        <relationshipName>CurrencyRevaluations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RevalGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Our currency revaluation group.</description>
        <label>Group</label>
        <referenceTo>codaCurrencyRevaluationGroup__c</referenceTo>
        <relationshipLabel>Group Members</relationshipLabel>
        <relationshipName>RevalGroupMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RevaluationType__c</fullName>
        <label>Revaluation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReversalPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reversal Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Currency Revaluations (Reversal Period)</relationshipLabel>
        <relationshipName>CurrencyRevaluations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScheduledTime__c</fullName>
        <formula>RevalGroup__r.ScheduledTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Generating</fullName>
                </value>
                <value>
                    <fullName>Generation Error</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Posting</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Posting Error</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Discarding</fullName>
                </value>
                <value>
                    <fullName>Canceling</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Canceling Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnrealizedGainsLossesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unrealized Gains/Losses GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Currency Revaluations</relationshipLabel>
        <relationshipName>CurrencyRevaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Currency Revaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RevaluationType__c</columns>
        <columns>DocumentCurrency__c</columns>
        <columns>HomeExchangeRate__c</columns>
        <columns>DualExchangeRate__c</columns>
        <columns>PostingPeriod__c</columns>
        <columns>ReversalPeriod__c</columns>
        <columns>Status__c</columns>
        <columns>RevalGroup__c</columns>
        <columns>GroupDisplayName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CRV{000000}</displayFormat>
        <label>Currency Revaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>